test/tests/stages/7_compound_statements/valid/multiple_vars_same_name.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[2]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: b
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 4
                              None: 
                            None: 
                          Int: 
                          None: 
                    CS: 
                      CExpression: 
                        CAssignment: 
                          None: 
                          CVar: 
                            TIdentifier: a
                            None: 
                          CVar: 
                            TIdentifier: b
                            None: 
                          None: 
            CS: 
              CCompound: 
                CB: 
                  List[2]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: b
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                            None: 
                          Int: 
                          None: 
                    CS: 
                      CExpression: 
                        CAssignment: 
                          None: 
                          CVar: 
                            TIdentifier: a
                            None: 
                          CBinary: 
                            CSubtract: 
                            CVar: 
                              TIdentifier: a
                              None: 
                            CVar: 
                              TIdentifier: b
                              None: 
                            None: 
                          None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
